--- a/Cats/Base.lproj/Main.storyboard
+++ b/Cats/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,80 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TeK-QT-KN4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="catPhoto" rowHeight="150" id="Enx-5s-fO6" customClass="CatsTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Enx-5s-fO6" id="eSH-XT-6fv">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jeg-8O-Ry3">
+                                                    <rect key="frame" x="5" y="5" width="365" height="139.5"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsn-Dw-i7V">
+                                                    <rect key="frame" x="25" y="21" width="75.5" height="108"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="Label">
+                                                            <attributes>
+                                                                <font key="NSFont" size="32" name=".AppleSystemUIFont"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jeg-8O-Ry3" firstAttribute="centerY" secondItem="eSH-XT-6fv" secondAttribute="centerY" id="0A9-lL-idC"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gsn-Dw-i7V" secondAttribute="bottom" constant="10" id="0RG-UQ-J29"/>
+                                                <constraint firstItem="gsn-Dw-i7V" firstAttribute="top" secondItem="eSH-XT-6fv" secondAttribute="topMargin" constant="10" id="3a9-WL-CoO"/>
+                                                <constraint firstItem="jeg-8O-Ry3" firstAttribute="leading" secondItem="eSH-XT-6fv" secondAttribute="leading" constant="5" id="Cu8-yj-l5i"/>
+                                                <constraint firstAttribute="trailing" secondItem="jeg-8O-Ry3" secondAttribute="trailing" constant="5" id="FlP-pg-5GH"/>
+                                                <constraint firstItem="jeg-8O-Ry3" firstAttribute="centerX" secondItem="eSH-XT-6fv" secondAttribute="centerX" id="Fxj-of-l3b"/>
+                                                <constraint firstItem="jeg-8O-Ry3" firstAttribute="top" secondItem="eSH-XT-6fv" secondAttribute="top" constant="5" id="dFd-Kh-LaT"/>
+                                                <constraint firstItem="gsn-Dw-i7V" firstAttribute="leading" secondItem="eSH-XT-6fv" secondAttribute="leadingMargin" constant="10" id="phU-m2-wlS"/>
+                                                <constraint firstAttribute="bottom" secondItem="jeg-8O-Ry3" secondAttribute="bottom" constant="5" id="pyB-2O-End"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gsn-Dw-i7V" secondAttribute="trailing" constant="20" symbolic="YES" id="yey-rp-2eJ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="catImage" destination="jeg-8O-Ry3" id="gYj-M2-Qfg"/>
+                                            <outlet property="title" destination="gsn-Dw-i7V" id="7GD-1a-dIw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Gyt-ZP-6Kd"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="6rl-ch-zma"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TeK-QT-KN4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0t7-10-15u"/>
+                            <constraint firstItem="TeK-QT-KN4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="K9H-6R-hVb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TeK-QT-KN4" secondAttribute="trailing" id="g0r-Cc-dgv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TeK-QT-KN4" secondAttribute="bottom" id="mbA-ht-PoD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="TeK-QT-KN4" id="XPe-Sp-txr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-130" y="-25"/>
         </scene>
     </scenes>
 </document>
